force-app/main/default/objects/Appeal__c/fields/Appeal_reason__c.field-meta.xml
<CustomField>
    <fullName>Appeal_reason__c</fullName>
    <label>Appeal reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record request</fullName>
            </value>
            <value>
                <fullName>Clinical appeal</fullName>
            </value>
            <value>
                <fullName>Payment dispute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>