force-app/main/default/objects/Appeal__c/fields/CARC__c.field-meta.xml
<CustomField>
    <fullName>CARC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARC</label>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Appeals</relationshipLabel>
    <relationshipName>Appeals</relationshipName>
    <type>Lookup</type>
</CustomField>