force-app/main/default/objects/Appeal__c/fields/Documents_approved_for_Overturned__c.field-meta.xml
<CustomField>
    <fullName>Documents_approved_for_Overturned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents approved for Overturned</label>
    <type>Checkbox</type>
</CustomField>