force-app/main/default/objects/Appeal__c/fields/Type_of_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Insurance__c</fullName>
    <formula>TEXT( Claim__r.Type_of_Insurance__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Insurance</label>
    <type>Text</type>
</CustomField>