force-app/main/default/objects/Appeal__c/validationRules/Documents_approved_for_Overturned.validationRule-meta.xml
<ValidationRule>
    <fullName>Documents_approved_for_Overturned</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Documents_approved_for_Overturned__c = FALSE, ISPICKVAL(Status__c, &quot;Overturned&quot;))</errorConditionFormula>
    <errorDisplayField>Documents_approved_for_Overturned__c</errorDisplayField>
    <errorMessage>Please attach approved document for Overturned and click this checkbox.</errorMessage>
</ValidationRule>