force-app/main/default/objects/Appeal__c/validationRules/Documents_approved_for_Upheld.validationRule-meta.xml
<ValidationRule>
    <fullName>Documents_approved_for_Upheld</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Documents_approved_for_Upheld__c = FALSE,   ISPICKVAL(Status__c, &quot;Upheld&quot;))</errorConditionFormula>
    <errorDisplayField>Documents_approved_for_Upheld__c</errorDisplayField>
    <errorMessage>Please attach approved document for Upheld and click this checkbox.</errorMessage>
</ValidationRule>